# asgi_cable

./: README.md  pyproject.toml
asgi_cable/: __init__.py  channels.py  datatypes.py  websockets.py
asgi_cable/contrib/django/: __init__.py
asgi_cable/contrib/django/management/commands/: runserver.py
examples/django/: asgi.py  settings.py  urls.py  wsgi.py
examples/django_demo/demo/: urls.py  views.py
examples/django_demo/demo/static/: main.js  socket.js
examples/django_demo/demo/templates/: index.html
examples/django_demo/django_demo/: asgi.py  settings.py  urls.py
examples/django_demo/static/: main.js  socket.js
wire/: __init__.py
