[tool.poetry]
name = "wire"
version = "0.1.0"
description = "SSE and WebSocket framework for ASGI."
authors = ["Alex Oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
