[tool.poetry]
name = "asgi_cable"
version = "0.1.0"
description = "A framework for the real-time ASGI apps."
authors = ["Alex Oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
